# rust_so_kernel

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  build.rs  hello.c  mlibc-cross.ini  out.txt  project_changes.diff  rust-toolchain.toml
.claude/skills/kernel-drivers/: SKILL.md
busybox-config/: minimal.config
disk-image-root/: hello.txt
disk-image-root/docs/: README.md
docs/: README.md  busybox-integration.md
docs/drivers/: README.md  architecture.md  roadmap.md
docs/fs/: ext2-extraction-plan.md
doom-port/: doomgeneric_constanos.c  doomgeneric_sound_constanos.c
doom-port/stub-include/: SDL_mixer.h
ext2/: Cargo.toml
ext2/src/: bgd.rs  bitmap.rs  dir.rs  dirent.rs  error.rs  inode.rs  lib.rs  repair.rs  superblock.rs  test_support.rs  testimg.rs  volume.rs
hal/: Cargo.toml
hal/src/: ac97.rs  acpi.rs  block.rs  keyboard.rs  lib.rs  mouse.rs  pit.rs  rtc.rs
kernel/: Cargo.toml  build.rs
kernel/.cargo/: config.toml
kernel/src/: ac97.rs  acpi.rs  debug.rs  framebuffer.rs  hal.rs  hw_tests.rs  keyboard.rs  keyboard_buffer.rs  main.rs  mouse.rs  panic.rs  pci.rs  pit.rs  repl.rs  rtc.rs  serial.rs  test_framework.rs  tty.rs
kernel/src/allocator/: buddy_allocator.rs  bump.rs  kernel_allocator.rs  mod.rs  slab.rs
kernel/src/block/: ata.rs  mod.rs
kernel/src/cpu/: mod.rs  tsc.rs
kernel/src/drivers/: dev_dsp.rs  dev_input_event.rs  dev_kbd.rs  dev_kbdraw.rs  dev_mouse_event.rs  dev_null.rs  dev_wad.rs  dev_zero.rs  evdev.rs  framebuffer_console.rs  mod.rs  serial_console.rs
kernel/src/fs/: devfs.rs  ext2.rs  initramfs.rs  mod.rs  procfs.rs  ramfs.rs  types.rs  vfs.rs
kernel/src/init/: devices.rs  memory.rs  mod.rs  processes.rs  test_support.rs
kernel/src/interrupts/: exception.rs  idt.rs  mod.rs  pic.rs
kernel/src/ipc/: channel.rs  mod.rs
kernel/src/memory/: address_space.rs  cow.rs  demand_paging.rs  elf.rs  elf_loader.rs  frame_allocator.rs  mod.rs  page_table_manager.rs  paging.rs  signal_trampoline.rs  user_code.rs  user_pages.rs  vma.rs
kernel/src/process/: context.rs  file.rs  fpu.rs  irq_guard.rs  mod.rs  pipe.rs  scheduler.rs  signal.rs  syscall.rs  timer_preempt.rs  trapframe.rs  trapret.rs  tss.rs  user_programs.rs  user_test_fileio.rs  user_test_minimal.rs  userspace.rs
kernel/src/process/syscall/: fs.rs  ipc.rs  misc.rs  mod.rs  poll.rs  process_ctl.rs  signal.rs  sync.rs
kernel/src/time/: clockevent.rs  clocksource.rs  hrtimer.rs  mod.rs
kernel/tests/: pit.rs  should_panic.rs
mlibc-port/constanos-sysdeps/: meson.build
mlibc-port/constanos-sysdeps/crt-x86_64/: crt1.S
mlibc-port/constanos-sysdeps/generic/: entry.cpp  generic.cpp
mlibc-port/constanos-sysdeps/include/: malloc.h  mntent.h
mlibc-port/constanos-sysdeps/include/abi-bits/: errno.h  fcntl.h  poll.h  seek-whence.h  socket.h  statfs.h  vm-flags.h
mlibc-port/constanos-sysdeps/include/sys/: statfs.h  sysinfo.h  sysmacros.h
qemu-test-runner/: Cargo.toml
qemu-test-runner/src/: main.rs
quake-port/: quakegeneric_constanos.c  quakegeneric_sound_constanos.c
scripts/: build-busybox.sh  build-doom.sh  build-quake.sh  fetch-freedoom.sh  fetch-quake-shareware.sh  qemu-debug.sh  run-kernel-tests.sh  setup-mlibc.sh
src/: main.rs
userspace/: Cargo.toml  linker.ld
userspace/.cargo/: config.toml
userspace/c/: argv_test.c  ext2_robust_test.c  fpu_test.c  hello.c  jobctl_test.c  kdebug.c  mlibc_signal_test.c  producer_consumer.c  pthread_test.c  stat_test.c  wadio.c
userspace/src/: fmt.rs  lib.rs  syscall.rs
