[package]
name = "so2"
version = "0.1.0"
edition = "2021"

[build-dependencies]
bootloader = "0.11"
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
ovmf-prebuilt = "0.2.3"

[dependencies]
# used for UEFI booting in QEMU
ovmf-prebuilt = "0.2.3"

[workspace]
members = ["kernel"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"]
test-success-exit-code = 33